feat: return team registration response
