# src/main/java/com/company/officecommute/dto/team/response/TeamRegisterResponse.java
@@ -1,0 +1,4 @@
+package com.company.officecommute.dto.team.response;
+
+public record TeamRegisterResponse(Long teamId) {
+}
